[tool.poetry]
name = "atomichabits-fastapi"
version = "0.1.0"
description = ""
authors = ["electr0n4ik <andreyshka3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
